Fixed a E0402 issue.